Fixing Math setting for nsec2020 crackme

--- a/_posts/2020-05-18-nsec2020-crackme.md
+++ b/_posts/2020-05-18-nsec2020-crackme.md
@@ -6,6 +6,7 @@ date:       2020-5-18 10:00:00 -0400
 summary:    Walkthrough of the 6 crackme challenges from NorthSec 2020. With increasing difficulty, and not necessarily with the reversing portion itself, I was able to finish all 6 for my team. Follow along as I step through my solutions and add some personal comments.
 categories: [reverse-engineering]
 thumbnail:  cogs
+math: true
 keywords:   northsec,nsec,nsec2020,ctf,writeup,binary,reverse engineering,re,ghidra,gdb,gef
 thumbnail:  https://padraignix.github.io/assets/nsec2020/infocard-crackme.PNG
 canon:      https://padraignix.github.io/reverse-engineering/2020/05/18/nsec2020-crackme/
